# calamares-endeavouros

data/eos/modules/: packagechooser.conf
src/modules/mypkgchooserq/: CMakeLists.txt  MyPkgChooserQmlViewStep.cpp  MyPkgChooserQmlViewStep.h  Tools.qml  mypkgchooserq-qt6.qml  mypkgchooserq-qt6.qrc  mypkgchooserq.conf  mypkgchooserq.qml  mypkgchooserq.qrc
